[tool.poetry]
name = "bispectrum-real-data-analysis"
version = "0.1.0"
description = "Repo to perform high order spectra analysis in real data"
authors = ["Matheus Anjos <matheusvra@hotmail.com>"]
readme = "README.md"
packages = [{include = "bispectrum_real_data_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
