[tool.poetry]
name = "bispectrum-real-data-analysis"
version = "0.1.0"
description = "Repo to perform high order spectra analysis in real data"
authors = ["Matheus Anjos <matheusvra@hotmail.com>"]
readme = "README.md"
packages = [{include = "bispectrum_real_data_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
high-order-spectra-analysis = {git = "git@github.com:matheusvra/high_order_spectra_analysis.git", rev = "main"}
scipy = "^1.9.3"
plotly = "^5.13.0"
jupyter = "^1.0.0"
pendulum = "^2.1.2"
loguru = "^0.6.0"
mat73 = "^0.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
